--- a/package.json
+++ b/package.json
@@ -1,21 +1,18 @@
 {
   "name": "portfolio",
-  "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "description": "A starter template for creating a web app with Lustre + Gleam + TypeScript",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "check": "svelte-check --tsconfig ./tsconfig.json"
+    "preview": "vite preview"
   },
+  "keywords": [],
+  "license": "MIT",
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^2.4.2",
-    "@tsconfig/svelte": "^5.0.0",
-    "svelte": "^4.0.5",
-    "svelte-check": "^3.4.6",
-    "tslib": "^2.6.0",
-    "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "ts-gleam": "^1.0.0",
+    "vite-gleam": "^0.3.0",
+    "vite": "^4.0.4"
   }
 }
